@@ -14,7 +14,7 @@ public class ContohList14 {
         l.remove(0);
         System.out.printf("Elemen 0: %d total elemen: %d elemen terakhir: %s\n", l.get(0), l.size(), l.get(l.size() - 1));
 
-        List<String> names = new LinkedList<>();
+        LinkedList<String> names = new LinkedList<>();
         names.add("Noureen");
         names.add("Akhleema");
         names.add("Shannum");
@@ -22,10 +22,7 @@ public class ContohList14 {
         names.add("Al-Qarni");
 
         names.push("Mei-mei");
-        System.out.printf("Elemen 0: %s total elemen: %d elemen terakhir: %s\n", names.get(0), names.size(), names.get(names.size() - 1));
-
-        names.set(0, "My kid");
-        System.out.printf("Elemen 0: %s total elemen: %s elemen terakhir: %s\n", names.get(0), names.size(), names.get(names.size() - 1));
+        System.out.printf("Elemen 0: %s total elemen: %d elemen terakhir: %s\n", names.getFirst(), names.size(), names.getLast());
         System.out.println("Names: " + names.toString());
     }
 }
